--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     // Dependency to the Joke displaying Android library
     implementation project(':joker')
 
+    // Dependency to the backend library
+    //implementation project(path: ':backend')
+
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
