--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     }
 }
 
+
 repositories {
     jcenter()
 }
@@ -33,4 +34,10 @@ dependencies {
     implementation 'javax.servlet:servlet-api:2.5'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
+}
+
+appengine {
+    run {
+        host = "0.0.0.0"
+    }
 }
