check if the device is emulator, if not get the device IP address

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 }
 
 appengine {
+    //tools.cloudSdkHome = 'Users/fifiv/AppData/Local/Google/Cloud SDK/google-cloud-sdk'
     run {
         host = "0.0.0.0"
     }
