--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 
     // Dependency to the Joke supplying Java library
     implementation project(':joke')
