fix unit tests for the AsyncTask

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,16 +11,17 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.udacity.gradle.builditbigger"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
+        //versionName rootProject.version
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -31,17 +32,32 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "mode"
+
+    productFlavors {
+        free {
+            dimension "mode"
+            applicationIdSuffix ".free"
+        }
+
+        paid {
+            dimension "mode"
+            applicationIdSuffix ".paid"
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     endpointsServer project(path: ':backend', configuration: 'endpoints')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
-    implementation 'com.google.api-client:google-api-client:1.23.0'
-    implementation 'com.google.http-client:google-http-client-android:1.23.0'
-    implementation 'com.google.code.findbugs:jsr305:3.0.2'
-    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:support-v4:$rootProject.supportLibraryVersion"
+    implementation "com.google.android.gms:play-services-ads:$rootProject.playServiceVersion"
+    implementation "com.google.api-client:google-api-client:$rootProject.googleClientVersion"
+    implementation "com.google.http-client:google-http-client-android:$rootProject.googleClientVersion"
+    implementation "com.google.code.findbugs:jsr305:$rootProject.findBugsVersion"
+    implementation "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
 
     // Dependency to the Joke supplying Java library
     implementation project(':joke')
@@ -49,9 +65,11 @@ dependencies {
     // Dependency to the Joke displaying Android library
     implementation project(':joker')
 
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation("com.android.support.test.espresso:espresso-core:$rootProject.espressoCoreVersion", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    androidTestImplementation "com.android.support.test:rules:$rootProject.espressoRulesVersion"
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:$rootProject.espressoIntentsVersion"
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:$rootProject.jUnitTestVersion"
 }
